// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a full article with all content items with dropcap template 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="maincomment"
    id="article-main"
  >
    <Head
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main
      role="main"
    >
      <div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        role="article"
      >
        <p>
          <span>
            T
          </span>
          his being Black History Month, last week
        </p>
        <div>
          <InteractiveWrapper
            attributes={
              Object {
                "chart-id": "csmgb",
              }
            }
            element="times-datawrapper"
            source="https://interactive.io"
          />
        </div>
        <div>
          <h2>
            Sponsored
          </h2>
          <div
            data-parent="group-3"
            id="advert-inarticle-native-1"
          />
          <div
            data-parent="group-3"
            id="advert-inarticle-native-2"
          />
        </div>
        <div
          id="3"
        >
          <div>
            <ArticleImage
              captionOptions={
                Object {
                  "caption": "An image caption",
                  "credits": "The image credits",
                }
              }
              imageOptions={
                Object {
                  "display": "primary",
                  "highResSize": null,
                  "lowResQuality": 3,
                  "lowResSize": 400,
                  "ratio": "1500:1000",
                  "uri": "https://image.io",
                }
              }
            />
          </div>
        </div>
        <div
          id="4"
        >
          <div>
            <ArticleImage
              captionOptions={
                Object {
                  "caption": "A secondary image caption",
                  "credits": "The secondary image credits",
                }
              }
              imageOptions={
                Object {
                  "display": "secondary",
                  "highResSize": null,
                  "lowResQuality": 3,
                  "lowResSize": 400,
                  "ratio": "1500:1000",
                  "uri": "https://image.io/secondary",
                }
              }
            />
          </div>
        </div>
        <div
          id="5"
        >
          <div>
            <ArticleImage
              captionOptions={
                Object {
                  "caption": "An inline image caption",
                  "credits": "The inline image credits",
                }
              }
              imageOptions={
                Object {
                  "display": "inline",
                  "highResSize": null,
                  "lowResQuality": 3,
                  "lowResSize": 400,
                  "ratio": "1500:1000",
                  "uri": "https://image.io/inline",
                }
              }
            />
          </div>
        </div>
        <p>
          <Link
            target="_blank"
            underlined={true}
            url="https://link.io"
          >
            Some Link
          </Link>
        </p>
        <p>
          Some content
        </p>
        <div>
          <h2>
            Advertisement
          </h2>
          <AdContainer
            slotName="inline-ad"
          />
        </div>
        <div>
          <div>
            <PullQuote
              caption="AName"
              quoteColour="#FF0000"
              text="a text"
              twitter="@AName"
            >
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div>
          <figure>
            <div>
              <div>
                <div
                  data-is-360={false}
                >
                  <div>
                    <video
                      controls={true}
                      data-account="57838016001"
                      data-application-id={true}
                      data-embed="default"
                      data-player="default"
                      data-video-id="4084164751001"
                      id="4084164751001-57838016001-3dbfe6b8-680b-11e9-b277-88f3d445182c"
                      poster="https://image.io?resize=960"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div>
                <Caption
                  text="This is video caption"
                />
              </div>
            </figcaption>
          </figure>
        </div>
        <KeyFacts
          ast={
            Object {
              "attributes": Object {
                "title": "Example title",
              },
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "Example bullet text",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "listElement",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "An example ",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                        Object {
                          "attributes": Object {
                            "href": "https://example.io",
                            "target": "_blank",
                            "type": "topic",
                          },
                          "children": Array [
                            Object {
                              "attributes": Object {
                                "value": "link",
                              },
                              "children": Array [],
                              "name": "text",
                            },
                          ],
                          "name": "link",
                        },
                      ],
                      "name": "listElement",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "More example text.",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "listElement",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "Example text ",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                        Object {
                          "attributes": Object {},
                          "children": Array [
                            Object {
                              "attributes": Object {
                                "value": "this is bold ",
                              },
                              "children": Array [],
                              "name": "text",
                            },
                          ],
                          "name": "bold",
                        },
                        Object {
                          "attributes": Object {},
                          "children": Array [
                            Object {
                              "attributes": Object {
                                "value": "this is in italics.",
                              },
                              "children": Array [],
                              "name": "text",
                            },
                          ],
                          "name": "italic",
                        },
                      ],
                      "name": "listElement",
                    },
                  ],
                  "name": "unorderedList",
                },
              ],
              "name": "keyFacts",
            }
          }
        />
        <h2>
          This is heading 2
        </h2>
        <h3>
          This is heading 3
        </h3>
        <h4>
          This is heading 4
        </h4>
        <h5>
          This is heading 5
        </h5>
        <h6>
          This is heading 6
        </h6>
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": Object {
                "current": "dummiy-spotim-id",
              },
            }
          }
          commentsEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`2. an article with interactives 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main
      role="main"
    >
      <div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        role="article"
      >
        <div>
          <InteractiveWrapper
            attributes={
              Object {
                "chart-id": "csmgb",
              }
            }
            element="times-datawrapper"
            source="https://interactive.io"
          />
        </div>
        <div>
          <InteractiveWrapper
            attributes={
              Object {
                "chart-id": "csmgb",
              }
            }
            element="times-datawrapper"
            source="https://interactive.io"
          />
        </div>
        <div>
          <h2>
            Sponsored
          </h2>
          <div
            data-parent="group-3"
            id="advert-inarticle-native-1"
          />
          <div
            data-parent="group-3"
            id="advert-inarticle-native-2"
          />
        </div>
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": Object {
                "current": "dummiy-spotim-id",
              },
            }
          }
          commentsEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`3. an article with no content 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main
      role="main"
    >
      <div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        role="article"
      >
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": Object {
                "current": "dummiy-spotim-id",
              },
            }
          }
          commentsEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`4. an article with no content if content is set as null 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main
      role="main"
    >
      <div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        role="article"
      >
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": Object {
                "current": "dummiy-spotim-id",
              },
            }
          }
          commentsEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`5. an article with a nested markup in first paragraph displays a drop cap 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="maincomment"
    id="article-main"
  >
    <Head
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main
      role="main"
    >
      <div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        role="article"
      >
        <p>
          <span>
            <b>
              Q
            </b>
          </span>
          <b>
             Some years ago I made the decision to take as a friend a woman who is very opinionated.
          </b>
        </p>
        <p>
          <b>
            When she does come to social events, she dominates.
          </b>
        </p>
        <div>
          <h2>
            Sponsored
          </h2>
          <div
            data-parent="group-3"
            id="advert-inarticle-native-1"
          />
          <div
            data-parent="group-3"
            id="advert-inarticle-native-2"
          />
        </div>
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": Object {
                "current": "dummiy-spotim-id",
              },
            }
          }
          commentsEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticlesVisible={false}
          savingEnabled={true}
          sharingEnabled={true}
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`6. an article with heading tags 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main
      role="main"
    >
      <div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        role="article"
      >
        <h2>
          This is heading 2
        </h2>
        <h3>
          This is heading 3
        </h3>
        <div>
          <h2>
            Sponsored
          </h2>
          <div
            data-parent="group-3"
            id="advert-inarticle-native-1"
          />
          <div
            data-parent="group-3"
            id="advert-inarticle-native-2"
          />
        </div>
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": Object {
                "current": "dummiy-spotim-id",
              },
            }
          }
          commentsEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`7. an article with link 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main
      role="main"
    >
      <div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        role="article"
      >
        <p>
          <Link
            underlined={true}
            url="https://www.thetimes.co.uk/article/i-like-it-boiling-hot-says-twitter-boss-jack-dorsey-cjclqjpb2"
          >
            Jack Dorsey
          </Link>
           said today that while the company was unlikely to open its offices before September, almost all staff could now work permanently from wherever they want.
        </p>
        <div>
          <h2>
            Sponsored
          </h2>
          <div
            data-parent="group-3"
            id="advert-inarticle-native-1"
          />
          <div
            data-parent="group-3"
            id="advert-inarticle-native-2"
          />
        </div>
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": Object {
                "current": "dummiy-spotim-id",
              },
            }
          }
          commentsEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`8. an article with italic link 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main
      role="main"
    >
      <div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        role="article"
      >
        <p>
          In his 2015 book on the tournaments, 
          <Link
            underlined={true}
            url="https://www.thetimes.co.uk/article/superforecasting-by-philip-tetlock-and-dan-gardner-gkwwpbf3gsb"
          >
            <i>
              Superforecasting
            </i>
          </Link>
          , Professor Tetlock said the most accurate predictors all used very similar methods. They used a historical “base rate” for predicting how likely an event was, adjusting constantly in the light of new information.
        </p>
        <div>
          <h2>
            Sponsored
          </h2>
          <div
            data-parent="group-3"
            id="advert-inarticle-native-1"
          />
          <div
            data-parent="group-3"
            id="advert-inarticle-native-2"
          />
        </div>
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": Object {
                "current": "dummiy-spotim-id",
              },
            }
          }
          commentsEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`9. an article with bold text followed by bold link 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main
      role="main"
    >
      <div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        role="article"
      >
        <p>
          <b>
            2 
            <Link
              underlined={true}
              url="https://www.thetimes.co.uk/article/review-becoming-by-michelle-obama-the-astonishing-pressures-of-being-first-lady-zb6jkpffd"
            >
              Becoming by Michelle Obama
            </Link>
          </b>
        </p>
        <div>
          <h2>
            Sponsored
          </h2>
          <div
            data-parent="group-3"
            id="advert-inarticle-native-1"
          />
          <div
            data-parent="group-3"
            id="advert-inarticle-native-2"
          />
        </div>
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": Object {
                "current": "dummiy-spotim-id",
              },
            }
          }
          commentsEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`10. an article with italic and normal text link 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main
      role="main"
    >
      <div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        role="article"
      >
        <p>
          Family Action is one of two charities being supported by 
          <Link
            underlined={true}
            url="https://www.thetimes.co.uk/article/the-times-coronavirus-charity-appeal-2020-help-those-in-hardship-lp6f2jdsb"
          >
            <i>
              The Times
            </i>
             Coronavirus Charity Appeal
          </Link>
           to support people in greatest hardship under the restrictions. The second charity is The Big Issue Foundation.
        </p>
        <div>
          <h2>
            Sponsored
          </h2>
          <div
            data-parent="group-3"
            id="advert-inarticle-native-1"
          />
          <div
            data-parent="group-3"
            id="advert-inarticle-native-2"
          />
        </div>
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": Object {
                "current": "dummiy-spotim-id",
              },
            }
          }
          commentsEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`11. an article with bold and italic text at the same time 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main
      role="main"
    >
      <div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        role="article"
      >
        <p>
          <b>
            <i>
              Conversations with Friends
            </i>
          </b>
        </p>
        <div>
          <h2>
            Sponsored
          </h2>
          <div
            data-parent="group-3"
            id="advert-inarticle-native-1"
          />
          <div
            data-parent="group-3"
            id="advert-inarticle-native-2"
          />
        </div>
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": Object {
                "current": "dummiy-spotim-id",
              },
            }
          }
          commentsEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`12. an article with text wrapped in inline element 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main
      role="main"
    >
      <div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        role="article"
      >
        <p>
          <span>
            They may have been improved by the controversy that ensued when Watson appeared on the cover of Vanity Fair to promote it, wearing a top that partially exposed her breasts. She rejected criticism that the pose was at odds with her claim to be a feminist. “Feminism is not a stick with which to beat other women. It’s about liberation. It’s about equality,” she said, adding: “I really don’t know what my tits have to do with it.” 
          </span>
        </p>
        <div>
          <h2>
            Sponsored
          </h2>
          <div
            data-parent="group-3"
            id="advert-inarticle-native-1"
          />
          <div
            data-parent="group-3"
            id="advert-inarticle-native-2"
          />
        </div>
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": Object {
                "current": "dummiy-spotim-id",
              },
            }
          }
          commentsEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`13. an article with paragraph with text and inline element 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main
      role="main"
    >
      <div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        role="article"
      >
        <p>
          20. 
          <span>
            Participants’ names and general locations will be published if they are the winner of the Competition in accordance with regulatory requirements, both during this and future promotions by the Promoter or any associated or subsidiary company of News Corp UK & Ireland Limited.
          </span>
        </p>
        <div>
          <h2>
            Sponsored
          </h2>
          <div
            data-parent="group-3"
            id="advert-inarticle-native-1"
          />
          <div
            data-parent="group-3"
            id="advert-inarticle-native-2"
          />
        </div>
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": Object {
                "current": "dummiy-spotim-id",
              },
            }
          }
          commentsEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`14. an article with inline inside a bold tag 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main
      role="main"
    >
      <div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        role="article"
      >
        <p>
          <b>
            <span>
              Meera Menon, 15, 100min
            </span>
          </b>
        </p>
        <div>
          <h2>
            Sponsored
          </h2>
          <div
            data-parent="group-3"
            id="advert-inarticle-native-1"
          />
          <div
            data-parent="group-3"
            id="advert-inarticle-native-2"
          />
        </div>
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": Object {
                "current": "dummiy-spotim-id",
              },
            }
          }
          commentsEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`15. an article starting with single quote 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="maincomment"
    id="article-main"
  >
    <Head
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main
      role="main"
    >
      <div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        role="article"
      >
        <p>
          <span>
            ‘S
          </span>
          orting eyebrows?! Really? During a pandemic?!” This tweet landed in my Twitter feed after talking to Jenni Murray on BBC Radio 4 
        </p>
        <div>
          <h2>
            Sponsored
          </h2>
          <div
            data-parent="group-3"
            id="advert-inarticle-native-1"
          />
          <div
            data-parent="group-3"
            id="advert-inarticle-native-2"
          />
        </div>
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": Object {
                "current": "dummiy-spotim-id",
              },
            }
          }
          commentsEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`16. an article starting with double quote 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="maincomment"
    id="article-main"
  >
    <Head
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main
      role="main"
    >
      <div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        role="article"
      >
        <p>
          <span>
            “S
          </span>
          orting eyebrows?! Really? During a pandemic?!” This tweet landed in my Twitter feed after talking to Jenni Murray on BBC Radio 4 
        </p>
        <div>
          <h2>
            Sponsored
          </h2>
          <div
            data-parent="group-3"
            id="advert-inarticle-native-1"
          />
          <div
            data-parent="group-3"
            id="advert-inarticle-native-2"
          />
        </div>
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": Object {
                "current": "dummiy-spotim-id",
              },
            }
          }
          commentsEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;
